# mcp-aws-toolkit

./: .gitignore  README.md  pyproject.toml
src/mcp_aws_toolkit/: server.py
src/mcp_aws_toolkit/tools/: cloudwatch.py  cost.py  ecs.py  iam.py  lambda_tools.py  s3.py
tests/: conftest.py  test_cloudwatch.py  test_cost.py  test_ecs.py  test_iam.py  test_lambda.py  test_s3.py
