[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-aws-toolkit"
version = "0.1.0"
description = "MCP server exposing AWS tools: ECS, CloudWatch, S3, IAM, Lambda"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]

[project.scripts]
mcp-aws-toolkit = "mcp_aws_toolkit.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_aws_toolkit"]
